--- a/templates/home.html
+++ b/templates/home.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </section>
-            <section class="text-center">
+            <section class="text-center bg--dark">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 col-md-8">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="bg--dark">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
