--- a/templates/list.html
+++ b/templates/list.html
@@ -17,7 +17,7 @@
     <body class="scroll-assist" data-smooth-scroll-offset="77">
         <div class="nav-container"> </div>
         <div class="main-container">
-            <section class="text-center">
+            <section class="text-center bg--dark">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 col-md-8">
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="bg--dark">
                 <div class="container">
                     <div class="row">
                         <!--<div class="masonry">
@@ -56,8 +56,30 @@
                         </div>
                         {% endfor %}
                     </div>
+
+                </div>
+            </section>
+            <section class="bg--dark">
+                <div class="container">
                     <div class="row">
-                        <p>{{absent}} were found to be absent.</p>
+                         <div class="col-sm-10 col-md-8">
+                            <p class="lead">The following people were found to be absent</p>
+                             <br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <ul class="accordion accordion-1">
+                            {% for y in absentlist %}
+                            <li>
+                                <div class="accordion__title">
+                                    <span class="h5">{{ absent_name[y] }} - {{absent_sap[y]}}</span>
+                                </div>
+                                <div class="accordion__content">
+                                    Mark Present
+                                </div>
+                            </li>
+                            {% endfor  %}
+                        </ul>
                     </div>
                 </div>
             </section>
