--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
                                     <div class="col-sm-12"> <input type="password" name="password" placeholder="Password"> </div>
                                     <div class="col-sm-12"> <button class="btn btn--primary type--uppercase" type="submit">Login</button> </div>
                                 </div>
-                            </form> <span class="type--fine-print block">Forgot your username or password? <a href="#">Recover account</a></span> </div>
+                            </form><span class="type--fine-print block">Dont have an account yet? <a href="/register">Create account</a></span> <span class="type--fine-print block">Forgot your username or password? <a href="#">Recover account</a></span> </div>
                     </div>
                 </div>
             </section>
